--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,58 @@
+:root {
+    --primary: #FFCE00;
+    --secondary: #FE4880;
+    --dark: #212121;
+    --light: #F3F3F3
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body{
+    /* font-family: ; */
     padding: 60px;
     background-image: url("/img/crystals-unsplash.jpg");
 }
 
 img{
-    width: 50%;
-    border: 2px solid black;
+    width: 60%;
+    border: 1px solid black;
+    display: flex;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
+
 }
 
-/* .orientation {
-    transform: rotate(180deg);
-} */
 .my-class{
     background-color: white;
     padding: 30px;
-    width: 50%;
+    width: 80%;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 80.2);
+
 }
+
+
 
 button{
     padding:3px;
     margin: 5px 0;
+    border: 1px solid black;
+    box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, .2);
+
 }
 
+
 @media (max-width: 600px){
-    img{
+    body {
+        padding: 30px;
+    } 
+    img {
         width: 100%;
     }
 
-    .my-class{
+    .my-class {
         width: 100%;
-        padding: 8px;
+        padding: 0px;
     }
 }
