--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,15 @@ body{
 }
 
 img{
-    width: 60%;
+    width: 40%;
+    height: 40%;
     border: 1px solid black;
-    display: flex;
     box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 0.2);
 
+}
+
+.reading {
+    display: flex;
 }
 
 .my-class{
@@ -30,6 +34,19 @@ img{
     width: 80%;
     box-shadow: 0px 3px 18px 3px rgba(0, 0, 0, 80.2);
 
+}
+
+
+
+#meaning {
+    padding-top: 0px;
+    font-size: 25px;
+    display: inline;
+}
+
+#text {
+    font-size: 20px;
+    display: inline;
 }
 
 
@@ -54,5 +71,15 @@ button{
     .my-class {
         width: 100%;
         padding: 0px;
+    }
+
+    .reading {
+        display: block;
+    }
+
+    #meaning {
+        padding-top: 10px;
+        padding-left: 5px;
+        font-size: 20px;
     }
 }
