trying out agnes as background

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 body{
     /* font-family: ; */
     padding: 60px;
-    background-image: url("/img/crystals-unsplash.jpg");
+    background-image: url("/img/AstraArt.jpg");
 }
 
 img{
